# frontend-

./: .replit  README.md  app.py  main.py  pyproject.toml
templates/: footer.html  index.html  jobitem.html  nav.html
templets/: home.html
